# MIDS266-NLP-final-project

./: # 08_Evaluation_&_Statistics.ipynb  .gitignore  01_Setup_&_EDA.ipynb  02_Baseline_BART.ipynb  02a_Analyze_Baseline_Run.ipynb  03_Generate_Candidate.ipynb  04_Rerank_&_Score.ipynb  05_Analysis.ipynb  06_Human_Audit_Prep.ipynb  07_Final_Test.ipynb  Colab_Setup.ipynb  Final_Plots.ipynb  README.md  Setup_&_Paths.ipynb  pyproject.toml  requirements.txt  setup.py
configs/: baseline.json  eval_metrics.json  generate_top_p_k8.json  train_bart_base.json
docs/: COLAB_DRIVE_SETUP.md  COLAB_GUIDE.md  COLAB_SETUP.md  IMPORT_UPDATE_GUIDE.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  SETUP.md
examples/: pipeline_example.py  train_example.py
notebooks/: 00_setup_and_checks.ipynb  01_data_and_baseline.ipynb  03_train_baseline_bart.ipynb  04_generate_k_candidates.ipynb  05_verify_and_rerank.ipynb  colab_setup.py
notebooks/EDA/: Data_EDA.ipynb
outputs/: final_money_table.csv  final_results_table.csv  human_audit_50_samples.csv  human_audit_COMPLETED_v2.csv  human_audit_TEST_SET.csv  human_audit_TEST_SET_FULL_TEXT.csv
paper/: paper.tex
reports/: proposal.md
results/: baseline_bart_20k_metrics.json
scripts/: prepare_for_colab.sh
src/align_rerank/: __init__.py  cli.py  create_baseline.py  eval_automatic.py  eval_human.py  generate_candidates.py  rerank.py  score_alignscore.py  score_factcc.py  stats.py  train_bart.py
src/align_rerank/utils/: __init__.py  data.py  io.py  tables.py  text.py
tests/: test_alignscore_reduction.py  test_chunking.py  test_io.py
(+5 files in other folders)
