[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "align-rerank"
version = "0.1.0"
description = "Verifier-reranking pipeline for factual abstractive summarization"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Hannibal"}]
license = {text = "MIT"}
dependencies = [
  "transformers>=4.41.0",
  "datasets>=2.20.0",
  "evaluate>=0.4.2",
  "accelerate>=0.31.0",
  "torch>=2.1",
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "tqdm>=4.66",
  "nltk>=3.8.1",
  "typer>=0.12.3",
  "rich>=13.7.0",
  "bert-score>=0.3.13",
  "rouge-score>=0.1.2",
  "sentencepiece>=0.2.0",
  "sacrebleu>=2.4.0",
  "huggingface-hub>=0.24.0",
  "orjson>=3.10.0"
]

[project.scripts]
alignrerank = "align_rerank.cli:app"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
